--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/royhobbstn/acs-postgres-11-15/issues"
   },
-  "homepage": "https://github.com/royhobbstn/acs-postgres-11-15#readme"
+  "homepage": "https://github.com/royhobbstn/acs-postgres-11-15#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-csv": "^0.6.0",
+    "iconv-lite": "^0.4.13",
+    "mkdirp": "^0.5.1",
+    "pg": "^4.5.1",
+    "pg-copy-streams": "^0.3.0",
+    "replace": "^0.3.0",
+    "request": "^2.79.0",
+    "rmdir": "^1.1.0",
+    "transliteration": "^0.1.1",
+    "unzip": "^0.1.11",
+    "winston": "^2.1.1",
+    "xlsx": "^0.8.0"
+  }
 }
