--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "express-csv": "^0.6.0",
     "iconv-lite": "^0.4.13",
+    "locutus": "^2.0.6",
     "mkdirp": "^0.5.1",
     "pg": "^4.5.1",
     "pg-copy-streams": "^0.3.0",
